// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Scroll test  1`] = `
<div
  style={
    Object {
      "border": "5px solid black",
      "height": "800px",
      "overflow": "scroll",
    }
  }
/>
`;

exports[`Scroll test  2`] = `
<div
  style={
    Object {
      "border": "5px solid black",
      "height": "1000px",
      "overflow": "scroll",
    }
  }
/>
`;
